# UBRobotics-Eurobot2025

./: .gitignore  CMakeLists.txt  README.md
Embedded System/ESP32 Manual Controller/Reciver/: Reciver.ino
Embedded System/ESP32 Manual Controller/Sender/: Sender.ino
Embedded System/EuroVL53L5_SAFE_BUS/: EuroVL53L5_SAFE_BUS.ino  Hardware.h  robot.cpp  robot.h  vl53l5cx_api.cpp  vl53l5cx_api.h  vl53l5cx_buffers.h
Embedded System/Locomotion/: Locomotion.ino
Embedded System/SensoredManiplater/: SensoredManiplater.ino
Embedded System/SensoredManiplater_Full/: SensoredManiplater_Full.ino
Embedded System/Servos/: Servos.ino
I2C_Slave/: I2C_Slave.ino
I2C_Slave/I2C_Test/: I2C_Test.ino
Simas/Sima_v0_2/: MAC.txt  Sima_v0_2.ino  motor_v3.h
Simas/Superstar_v1/: Superstar_v1.ino  motor_v3.h
Simas/host_v0_1/: host_v0_1.ino  vlookup.h
include/: client.hpp  config.hpp  locator.hpp  navigator.hpp  strategy.hpp  visualiser.hpp
include/elements/: cluster.hpp  construction_area.hpp  element.hpp  enemy.hpp  robot.hpp  sima.hpp
rpi/: i2c_server.py
src/: client.cpp  config.cpp  locator.cpp  main.cpp  navigator.cpp  strategy.cpp  visualiser.cpp
src/elements/: cluster.cpp  construction_area.cpp  element.cpp  enemy.cpp  robot.cpp  sima.cpp
